<!-- jabsorb - a Java to JavaScript Advanced Object Request Broker http://www.jabsorb.org 
	Copyright 2007-2009 The jabsorb team Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. 
-->
<!-- This POM file is only used for deployment in the Maven repository. It 
	may not be used to build the project. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>jabsorb</artifactId>
    <version>1.3.2-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Jabsorb (+ modified org.json) for Osgi</name>
    <url>http://jabsorb.org</url>

    <parent>
        <groupId>com.kohlschutter</groupId>
        <artifactId>kohlschutter-parent</artifactId>
        <version>1.5.2</version>
        <relativePath>../kohlschutter-parent/pom.xml</relativePath>
    </parent>

    <properties>
        <kohlschutter.project.base.directory>${project.basedir}</kohlschutter.project.base.directory>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <description>
    jabsorb -- A JSON-RPC ORB in Java and JavaScript.
    Includes slightly modified org.json code.
    Can be built as an osgi bundle/eclipse plugin using 'mvn clean install p2:site'; results can be found in 'target\repository\plugins\'
  </description>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/Servoy/jabsorb</url>
    </scm>

    <build>
        <plugins>
            <!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
				<version>2.4</version> <configuration> <archive> <manifestFile>META-INF/MANIFEST.MF</manifestFile> 
				<manifestEntries> <Bundle-Version>${project.version}</Bundle-Version> </manifestEntries> 
				</archive> </configuration> </plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.8</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>jabsorb;singleton:=true</Bundle-SymbolicName>
                        <Export-Package>org.json,org.jabsorb.callback,org.jabsorb.localarg.imp
 l;uses:="org.jabsorb.localarg",org.jabsorb.reflect;uses:="org.jabsorb
 .localarg,org.jabsorb",org.jabsorb.reflect.copy;uses:="org.jabsorb.lo
 calarg,org.jabsorb",org.jabsorb.serializer.impl;uses:="org.json,org.j
 absorb.serializer,org.jabsorb",org.jabsorb.serializer;uses:="org.jabs
 orb,org.json,org.jabsorb.callback,org.jabsorb.reflect,org.jabsorb.loc
 alarg",org.jabsorb.client;uses:="org.json,org.jabsorb.serializer,org.
 jabsorb",org.jabsorb;uses:="org.json,org.jabsorb.callback,org.jabsorb
 .reflect,org.jabsorb.serializer.impl,org.jabsorb.serializer,org.jabso
 rb.localarg",org.jabsorb.localarg;uses:="org.jabsorb.localarg.impl,or
 g.jabsorb.reflect,org.jabsorb.serializer,org.jabsorb"</Export-Package>
                        <Import-Package>javax.servlet;version="[2.5,5)",
javax.servlet.http;version="[2.5,5)",
org.slf4j</Import-Package>
                        <Require-Bundle></Require-Bundle>
                        <Application-Name>jabsorb-${project.version}</Application-Name>
                        <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                        <Permissions>all-permissions</Permissions>
                        <Codebase>*</Codebase>
                    </instructions>
                </configuration>
            </plugin>
            <!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <failOnWarnings>false</failOnWarnings>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <!-- invoke with: mvn formatter:format -->
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>org/jabsorb/**/*.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <!-- invoke with: mvn license:format -->
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <failIfMissing>${license.strict}</failIfMissing>
                    <header>${kohlschutter.project.notice.file}</header>
                    <includes>
                        <include>src/main/java/org/jabsorb/**/*.java</include>
                        <include>src/test/java/org/jabsorb/**/*.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/package-info.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Runtime dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.5.0</version>
        </dependency>

        <!-- Optional runtime dependencies -->
        <dependency>
            <!-- Replacement for commons-logging required by httpclient -->
            <groupId>org.slf4j</groupId>
            <artifactId>jcl104-over-slf4j</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>6.1.6</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jsp-2.1</artifactId>
            <version>6.1.6</version>
        </dependency>
    </dependencies>
</project>
